# progettopds

./: CMakeLists.txt  Data.h  EditWindow.ui  FindDialog.cpp  FindDialog.h  ToDoApps.ui  UserDialog.cpp  UserDialog.h  Window.cpp  Window.h  edit.xpm  editwindow.cpp  editwindow.h  event.cpp  event.h  main.cpp  mainwindow.h  networkmanager.h  resources.qrc  todoapps.cpp  todoapps.h  userdialog.cpp  userdialog.h  window.cpp
New/: CMakeLists.txt  CMakeLists.txt.user.249e626  QT_Project_it_IT.ts  ToDoApps.ui  editwindow.cpp  editwindow.h  event.cpp  event.h  global.h  main.cpp  mainwindow.cpp  resources.qrc  todoapps.cpp  todoapps.h  userdialog.cpp  userdialog.h  window.cpp  window.h
Old/: Data.h  FindDialog.cpp  FindDialog.h  README.md  UserDialog.cpp  UserDialog.h  Window.cpp  Window.h  resources.qrc
